--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
+  "engines": {
+    "node": "14.17.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
